Fix static analysis violation in JsonViewDynamicFeature.